# FastGram-Outreach

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a549bc868643_init_leads_table.py
app/: config.py  database.py  dependencies.py  main.py
app/models/: lead.py
app/repositories/: lead_repository.py
app/routers/: auth.py  config.py  health.py  leads.py  outreach.py  system.py  tracking.py
app/services/: instagram_client.py  notification_service.py  outreach_engine.py  pause_manager.py  proxy_rotator.py  reply_tracker.py  sheets_client.py  warmup_manager.py
app/utils/: delay.py  logger.py
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  router.tsx
frontend/src/api/: auth.ts  client.ts  config.ts  leads.ts  status.ts
frontend/src/components/: LeadsTable.tsx
frontend/src/hooks/: useConfig.ts  useLeads.ts  useLeadsStats.ts  useSync.ts  useSystemStatus.ts
frontend/src/lib/: constants.ts  formatters.ts  queryClient.ts
frontend/src/pages/: ConfigPage.tsx  (+3 more)
n8n/workflows/: Session_check.json  alert_on_block.json  outreach_trigger.json  reply_polling.json  warmup_trigger.json
scripts/: sheets_to_pg.py  test_instagram.py  test_sheets.py
tests/: test_fastapi.py  test_instagram_client.py  test_notification_service.py  test_outreach_engine.py  test_pause_manager.py  test_proxy_rotator.py  test_reply_tracker.py  test_sheets_client.py  test_warmup_manager.py
(+26 files in other folders)
